# volren-rs

./: .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
crates/volren-core/: Cargo.toml
crates/volren-core/benches/: core_ops.rs
crates/volren-core/src/: camera.rs  lib.rs  picking.rs  render_params.rs  reslice.rs  window_level.rs
crates/volren-core/src/interaction/: events.rs  image_slice.rs  mod.rs  trackball.rs
crates/volren-core/src/math/: aabb.rs  mod.rs
crates/volren-core/src/transfer_function/: color.rs  lut.rs  mod.rs  opacity.rs  two_d.rs
crates/volren-core/src/volume/: dyn_volume.rs  mod.rs  scalar.rs
crates/volren-gpu/: Cargo.toml
crates/volren-gpu/src/: lib.rs  renderer.rs  texture.rs  uniforms.rs
crates/volren-gpu/src/shaders/: blit_rgba.wgsl  common.wgsl  crosshair.wgsl  fullscreen_quad.wgsl  gradient.wgsl  reslice.wgsl  shading.wgsl  volume_raycast.wgsl
