[package]
name = "volren-core"
description = "Core data types, camera, transfer functions, and interaction for volren-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
approx = { workspace = true }
