[package]
name = "volren-core"
description = "Core data types, camera, transfer functions, and interaction for volren-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/volren-core"
readme = "../../README.md"
keywords = ["volume-rendering", "medical-imaging", "camera", "transfer-function", "raycasting"]
categories = ["graphics", "algorithms", "science"]

[dependencies]
glam = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
approx = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "core_ops"
harness = false
