[package]
name = "volren-gpu"
description = "wgpu-based GPU volume renderer for volren-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
volren-core = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
half = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
volren-core = { workspace = true }

[features]
default = []
snapshot-tests = []
